# firewall_cleaner

./: .editorconfig  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
src/firewall_cleaner/: __init__.py  firewall_cleaner.py
